--- a/.github/workflows/sukisu_stock.yml
+++ b/.github/workflows/sukisu_stock.yml
@@ -57,22 +57,22 @@ jobs:
         id: get_time
         run: echo "timestamp=$(TZ='Asia/Kolkata' date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
-      - name: Send Telegram message on start
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID_PERSONAL }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          format: markdown
-          message: |
-            *🚀 Build Initiated*
-            ------------------------------------
-            *Workflow:* `${{ github.workflow }}`
-            *Run:* `#${{ github.run_number }}`
-            *Triggered by:* `${{ github.triggering_actor }}`
-            *Commit:* `${{ github.sha }}`
-            *Started at:* `${{ steps.get_time.outputs.timestamp }}` IST
-            ------------------------------------
-            [View Workflow Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+      # - name: Send Telegram message on start
+      #   uses: appleboy/telegram-action@master
+      #   with:
+      #     to: ${{ secrets.TELEGRAM_CHAT_ID_PERSONAL }}
+      #     token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      #     format: markdown
+      #     message: |
+      #       *🚀 Build Initiated*
+      #       ------------------------------------
+      #       *Workflow:* `${{ github.workflow }}`
+      #       *Run:* `#${{ github.run_number }}`
+      #       *Triggered by:* `${{ github.triggering_actor }}`
+      #       *Commit:* `${{ github.sha }}`
+      #       *Started at:* `${{ steps.get_time.outputs.timestamp }}` IST
+      #       ------------------------------------
+      #       [View Workflow Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
             
   build:
     needs: notify_start
