--- a/.github/workflows/ksunext_stock.yml
+++ b/.github/workflows/ksunext_stock.yml
@@ -16,7 +16,7 @@ on:
         type: string
         description: "Custom kernel suffix (leave empty for a random string)"
         required: false
-        default: "DareDevil⚡"
+        default: "DareDevil 🪄"
       FAST_BUILD:
         type: boolean
         description: "Enable fast build?"
