--- a/.github/workflows/ksunext_stock.yml
+++ b/.github/workflows/ksunext_stock.yml
@@ -31,6 +31,11 @@ on:
           - CI
           - Release
           - NoN
+
+      susfs_branch:
+        required: true
+        type: string
+        default: ""
       KSU_META:
         type: string
         description: "Branch name/Custom version identifier"
