--- a/.github/workflows/ksunext_stock.yml
+++ b/.github/workflows/ksunext_stock.yml
@@ -18,6 +18,7 @@ on:
       manifest:
         required: true
         type: string
+        default:manifest_stock
       android_version:
         required: true
         type: string
