--- a/.github/workflows/ksunext_stock.yml
+++ b/.github/workflows/ksunext_stock.yml
@@ -25,7 +25,7 @@ on:
       android_version:
         required: true
         type: string
-        default: 12
+        default: android12
       kernel_version:
         required: true
         type: string
