--- a/.github/workflows/ksunext_stock.yml
+++ b/.github/workflows/ksunext_stock.yml
@@ -4,37 +4,27 @@ permissions:
   actions: write   # Allows triggering actions
 
 on:
-  workflow_dispatch: # This allows this workflow to be called from another workflow
+  workflow_call: # This allows this workflow to be called from another workflow
     inputs:
       model:
         required: true
         type: string
-        default: oplus6983
       soc:
         required: true
         type: string
-        default: mt6983
       branch:
         required: true
         type: string
-        default: mt6983_v_15.0.0_nord_3
       manifest:
         required: true
         type: string
-        default: manifest_stock
       android_version:
         required: true
         type: string
-        default: android12
       kernel_version:
         required: true
         type: string
-        default: 5.10
-      ksun_branch:
-        required: true
-        type: string
-        default: stable
-
+  
 jobs:
   build-kernel-oneplus-kernelsu-susfs:
     runs-on: ubuntu-latest
@@ -107,7 +97,7 @@ jobs:
           # Clone repositories using the branch names
           git clone https://github.com/TheWildJames/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b "$SUSFS_BRANCH"
-          git clone https://github.com/CodeWithRKG/RKG_KPatches.git
+          git clone https://github.com/TheWildJames/kernel_patches.git
 
       - name: Initialize and Sync Kernel Source
         run: |
@@ -117,27 +107,25 @@ jobs:
           
           # Initialize and sync kernel source
           echo "Initializing and syncing kernel source..."
-          repo init -u https://github.com/hemasai1109/Custom_kernel_OnePlus_Nord3.git -m ${{ github.event.inputs.FILE }}.xml --depth=1
-          # repo sync -c -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
+          $REPO init -u https://github.com/hemasai1109/Custom_kernel_OnePlus_Nord3.git -b ${{ inputs.branch }} -m ${{ inputs.manifest }} --repo-rev=v2.16 --depth=1 --no-clone-bundle --no-tags
           
-          # # Sync repo and apply patches
-          # $REPO --version
-          # $REPO --trace sync -c --no-clone-bundle --no-tags --optimized-fetch -j$(nproc --all) --fail-fast
+          # Sync repo and apply patches
+          $REPO --version
+          $REPO --trace sync -c --no-clone-bundle --no-tags --optimized-fetch -j$(nproc --all) --fail-fast
       
-      - name: Add KernelSU Next
+      - name: Add KernelSU
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG/kernel_platform"
           
-          echo "Adding KernelSU Next..."
-          
-          if [ "${{ inputs.ksun_branch }}" == "stable" ]; then
-            curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -
-          else
-            curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s ${{ inputs.ksun_branch }}
-          fi
+          echo "Adding KernelSU..."
+          curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next
           
           git submodule update --init --recursive
+          cd KernelSU-Next/kernel
+          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
+          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
+          sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" Makefile
 
       - name: Apply SUSFS Patches
         run: |
@@ -153,67 +141,34 @@ jobs:
           
           cd ./KernelSU-Next
           
-          if [ "${{ inputs.ksun_branch }}" == "stable" ] || [ "${{ inputs.ksun_branch }}" == "next" ]; then
-            echo "Applying next SUSFS patches..."
-            cp ../../../RKG_KPatches/next/0001-kernel-implement-susfs-v1.5.8-KernelSU-Next-v1.0.8.patch ./ksun_susfs_latest.patch
-            patch -p1 --forward < ksun_susfs_latest.patch || true
-          fi
-          
-          # Determine base version based on branch
-          case "${{ inputs.ksun_branch }}" in
-            next|stable)
-              BASE_VERSION=10200
-              ;;
-            next-susfs|next-susfs-dev)
-              BASE_VERSION=10198
-              ;;
-            *)
-              BASE_VERSION=10200
-              ;;
-          esac
-
-          git clone https://github.com/KernelSU-Next/KernelSU-Next
-          cd KernelSU-Next
-          C_VERSION=$(git log --oneline | wc -l)
-          cd ..
-          rm -rf KernelSU-Next
-          
-          cd ./kernel
-          KSU_VERSION=$(expr $C_VERSION "+" 10200)
-          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-          sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" Makefile
-          sed -i 's/\$\(KSU_GIT_VERSION\)/'${KSU_VERSION}'/g' Makefile
+          echo "Applying next SUSFS patches..."
+          cp ../../../kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./
+          patch -p1 --forward < 0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch || true
           
           # Change to common directory and apply SUSFS patch
-          cd ../../common
+          cd ../common
           if [ "${{ inputs.soc }}" == "sun" ]; then
             sed -i '/#include <trace\/hooks\/blk.h>/a #include <trace/hooks/fs.h>' ./fs/namespace.c
           fi
           patch -p1 < 50_add_susfs_in_gki-${{ inputs.android_version }}-${{ inputs.kernel_version }}.patch || true
-          
-          if ! grep -qxF '#define CMD_SUSFS_HIDE_SUS_MNTS_FOR_ALL_PROCS 0x55561' ./include/linux/susfs_def.h; then
-              curl -Ls https://raw.githubusercontent.com/CodeWithRKG/RKG_KPatches/refs/heads/main/hide_sus_mnts_for_all_procs.patch  | patch -p1 -F 3
-          else
-              echo "Line already present. Skipping SUSFS_HIDE_SUS_MNTS_FOR_ALL_PROCS Patch."
-          fi
-              
-      - name: Apply KSUN Hooks
+
+      - name: Apply KSU Hooks
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG/kernel_platform/common"
-          echo "Applying KSUN Hooks..."
-          cp ../../../RKG_KPatches/next/scope_min_manual_hooks_v1.4.patch ./manual_hooks.patch
-          patch -p1 --fuzz=3 < ./manual_hooks.patch
+          # Apply additional patch
+          cp ../../../kernel_patches/next/syscall_hooks.patch ./
+          patch -p1 --fuzz=3 < ./syscall_hooks.patch
           
       - name: Apply Hide Stuff Patches
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG/kernel_platform/common"
           # Apply additional patch
-          cp ../../../RKG_KPatches/69_hide_stuff.patch ./
+          cp ../../../kernel_patches/69_hide_stuff.patch ./
           patch -p1 -F 3 < 69_hide_stuff.patch
 
-      - name: Add KernelSU-Next and SUSFS Configuration Settings
+      - name: Add SUSFS Configuration Settings
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG/kernel_platform"
@@ -222,7 +177,7 @@ jobs:
           
           # Add KSU configuration settings
           echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_KSU_KPROBES_HOOK=n" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_KSU_WITH_KPROBES=n" >> ./common/arch/arm64/configs/gki_defconfig
           
           # Add SUSFS configuration settings
           echo "CONFIG_KSU_SUSFS=y" >> ./common/arch/arm64/configs/gki_defconfig
@@ -245,31 +200,76 @@ jobs:
           # Add additional tmpfs config setting
           echo "CONFIG_TMPFS_XATTR=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_TMPFS_POSIX_ACL=y" >> ./common/arch/arm64/configs/gki_defconfig
-
-      - name: Add BBR Support
-        run: |
-          echo "Changing to configuration directory: $CONFIG..."
-          cd "$CONFIG/kernel_platform"
           
-          echo "Adding configuration settings to gki_defconfig..."
-          echo "CONFIG_TCP_CONG_ADVANCED=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_TCP_CONG_BBR=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_TCP_CONG_BIC=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_TCP_CONG_WESTWOOD=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_TCP_CONG_HTCP=y" >> ./common/arch/arm64/configs/gki_defconfig
-          
-          echo "CONFIG_NET_SCH_FQ=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_NET_SCH_FQ_CODEL=y" >> ./common/arch/arm64/configs/gki_defconfig
-
-      - name: Add TTL Target Support
-        run: |
-          echo "Changing to configuration directory: $CONFIG..."
-          cd "$CONFIG/kernel_platform"
-          
-          echo "Adding configuration settings to gki_defconfig..."
+          # Add additional tmpfs config setting
           echo "CONFIG_IP_NF_TARGET_TTL=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_IP6_NF_TARGET_HL=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_IP6_NF_MATCH_HL=y" >> ./common/arch/arm64/configs/gki_defconfig
+          
+          # Add additional tcp_bbr config setting
+          # Enable BBR
+          echo "CONFIG_TCP_CONG_ADVANCED=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_TCP_CONG_BBR=y" >> ./common/arch/arm64/configs/gki_defconfig
+          
+          # Optional: Keep Reno/Cubic as alternatives
+          echo "CONFIG_TCP_CONG_CUBIC=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_TCP_CONG_RENO=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_TCP_CONG_CDG=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_DEFAULT_CUBIC=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo 'CONFIG_DEFAULT_TCP_CONG="cubic"' >> ./common/arch/arm64/configs/gki_defconfig
+          
+          # Disable Unnecessary TCP Congestion Algorithms
+          echo "# CONFIG_TCP_CONG_BIC is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_WESTWOOD is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_HTCP is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_HSTCP is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_HYBLA is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_VEGAS is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_NV is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_SCALABLE is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_LP is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_VENO is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_YEAH is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_ILLINOIS is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_TCP_CONG_DCTCP is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          # echo "# CONFIG_TCP_CONG_CDG is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          
+          # Enable FQ-CoDel and FQ for Queue Management
+          echo "CONFIG_NET_SCH_FQ=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_NET_SCH_FQ_CODEL=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_NET_SCH_DEFAULT=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_DEFAULT_FQ=y" >> ./common/arch/arm64/configs/gki_defconfig
+          echo 'CONFIG_DEFAULT_NET_SCH="fq"' >> ./common/arch/arm64/configs/gki_defconfig
+          
+          # Disable Other Queuing Disciplines
+          echo "# CONFIG_NET_SCH_CBQ is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_HTB is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_HFSC is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_ATM is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_PRIO is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_MULTIQ is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_RED is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_SFB is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_SFQ is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_TEQL is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_TBF is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_CBS is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_ETF is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_TAPRIO is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_GRED is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_DSMARK is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_NETEM is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_DRR is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_MQPRIO is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_SKBPRIO is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_CHOKE is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_QFQ is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_CODEL is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_CAKE is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_HHF is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_PIE is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_FQ_PIE is not set" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "# CONFIG_NET_SCH_INGRESS is not set" >> ./common/arch/arm64/configs/gki_defconfig
 
       - name: Run sed and perl Commands
         run: |
@@ -284,10 +284,9 @@ jobs:
           
           # Run sed commands for modifications
           sed -i 's/check_defconfig//' ./common/build.config.gki
-          
-          # Changing hash with random hash
-          for file in $(find ${GITHUB_WORKSPACE} -type f -name 'setlocalversion' 2>/dev/null);do echo $file; sed -i 's/echo \"\$res\"/res\=\$\(echo \$res \| cut -d- -f1-4\)-\$\(tr -dc a-z \<\/dev\/urandom \| head -c 5 \| sha256sum \| head -c 13\)\;echo \"\$res\"/g' $file ;done
-           
+          sed -i '$s|echo "\$res"|echo "\$res-fatalcoder524"|' ./common/scripts/setlocalversion
+          sed -i '$s|echo "\$res"|echo "\$res-fatalcoder524"|' ./msm-kernel/scripts/setlocalversion
+          sed -i '$s|echo "\$res"|echo "\$res-fatalcoder524"|' ./external/dtc/scripts/setlocalversion
           sed -i "/stable_scmversion_cmd/s/-maybe-dirty//g" ./build/kernel/kleaf/impl/stamp.bzl || echo "No stamp.bzl!"
           sed -i 's/-dirty//' ./common/scripts/setlocalversion
           sed -i 's/-dirty//' ./msm-kernel/scripts/setlocalversion
@@ -299,10 +298,11 @@ jobs:
          
           # Run perl command to modify UTS_VERSION
           DATESTR=$(date -u)
-          perl -pi -e 's{UTS_VERSION="\$\(echo \$UTS_VERSION \$CONFIG_FLAGS \$TIMESTAMP \| cut -b -\$UTS_LEN\)"}{UTS_VERSION="#1 SMP PREEMPT $DATESTR"}' ./common/scripts/mkcompile_h
-          perl -pi -e 's{UTS_VERSION="\$\(echo \$UTS_VERSION \$CONFIG_FLAGS \$TIMESTAMP \| cut -b -\$UTS_LEN\)"}{UTS_VERSION="#1 SMP PREEMPT $DATESTR"}' ./msm-kernel/scripts/mkcompile_h
+          perl -pi -e "s{UTS_VERSION=\"\\\$\\(echo \\\$UTS_VERSION \\\$CONFIG_FLAGS \\\$TIMESTAMP \\| cut -b -\\\$UTS_LEN\\)\"}{UTS_VERSION=\"#1 SMP PREEMPT $DATESTR\"}" ./common/scripts/mkcompile_h
+          perl -pi -e "s{UTS_VERSION=\"\\\$\\(echo \\\$UTS_VERSION \\\$CONFIG_FLAGS \\\$TIMESTAMP \\| cut -b -\\\$UTS_LEN\\)\"}{UTS_VERSION=\"#1 SMP PREEMPT $DATESTR\"}" ./msm-kernel/scripts/mkcompile_h
+          perl -pi -e "s{UTS_VERSION=\"\\\$\\(echo \\\$UTS_VERSION \\\$CONFIG_FLAGS \\\$TIMESTAMP \\| cut -b -\\\$UTS_LEN\\)\"}{UTS_VERSION=\"#1 SMP PREEMPT $DATESTR\"}" ./external/dtc/scripts/mkcompile_h
           
-          # find . -type f -exec sed -i 's/\(make\s\+-C[^\n]*\)\s\+/\1 -j$(nproc) /g' {} +
+          find . -type f -exec sed -i 's/\(make\s\+-C[^\n]*\)\s\+/\1 -j$(nproc) /g' {} +
 
       - name: Build the Kernel
         run: |
@@ -353,21 +353,21 @@ jobs:
           echo "Copying Image"
           cp ./out/dist/Image ../AnyKernel3/Image
 
-      - name: Create ZIP File
+      - name: Create ZIP Files for Different Formats
         run: |
           echo "Navigating to AnyKernel3 directory..."
           cd ./AnyKernel3
           
-          sed -i 's|^kernel\.string=.*|kernel.string=OnePlus Nord 4 KSUN + SUSFS Kernel by CodeWithRKG|' anykernel.sh
+          sed -i 's|^kernel\.string=.*|kernel.string=OnePlus 11 KSUN + SUSFS Kernel by fatalcoder524|' anykernel.sh
           sed -i 's|^do\.devicecheck=.*|do.devicecheck=1|' anykernel.sh
-          sed -i 's|^device\.name1=.*|device.name1=CPH2661|' anykernel.sh
-          sed -i 's|^device\.name2=.*|device.name2=CPH2661IN|' anykernel.sh
-          sed -i 's|^device\.name3=.*|device.name3=CPH2663|' anykernel.sh
-          sed -i 's|^device\.name4=.*|device.name4=CPH2663EEA|' anykernel.sh
+          sed -i 's|^device\.name1=.*|device.name1=CPH2447|' anykernel.sh
+          sed -i 's|^device\.name2=.*|device.name2=CPH2449|' anykernel.sh
+          sed -i 's|^device\.name3=.*|device.name3=CPH2451|' anykernel.sh
+          sed -i 's|^device\.name4=.*|device.name4=PHB110|' anykernel.sh
           sed -i '/ui_print " " "  -> ksu_supported: $ksu_supported"/i \
           ui_print "Features:"\
-          ui_print "-> KernelSU Next"\
-          ui_print "-> SUSFS v1.5.9"\
+          ui_print "-> KernelSU-Next-Official v1.0.6 (12490) "\
+          ui_print "-> SUSFS ඞ v1.5.5"\
           ui_print "-> Manual Hooks for Better Hiding"\
           ui_print "-> Wireguard Support"\
           ui_print "-> Simple Maphide for LineageOS Detections"\
@@ -375,18 +375,15 @@ jobs:
           ui_print "-> Magic Mount Support"\
           ui_print "-> CONFIG_TMPFS_XATTR Support for Mountify"\
           ui_print "-> TCP Congestion Algorithm: BBR enabled"' anykernel.sh
-
-          # Zip the files in the AnyKernel3 directory with a new naming convention
-          # Generate Indian Standard Time (IST)
-          IST_DATE_TIME=$(TZ=Asia/Kolkata date +'%d-%m-%Y_%I-%M-%p')
           
-          ZIP_NAME="Susfs-Kernel_${{ env.KSUVER }}_${{ env.CONFIG }}_${IST_DATE_TIME}_RKG.zip"
+          # Zip the files in the AnyKernel3 directory with a new naming convention
+          ZIP_NAME="${{ inputs.model }}_${{ inputs.android_version }}_${{ inputs.kernel_version }}_Next_SUSFS_AnyKernel3.zip"
           echo "Creating zip file $ZIP_NAME..."
           zip -r "../$ZIP_NAME" ./*
           
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Susfs-Kernel_${{ env.KSUVER }}_${{ env.CONFIG }}
+          name: kernel-${{ env.CONFIG }}
           path: |
             *.zip
