--- a/.github/workflows/ksunext_stock.yml
+++ b/.github/workflows/ksunext_stock.yml
@@ -146,7 +146,9 @@ jobs:
           cp ../../susfs4ksu/kernel_patches/include/linux/* ./include/linux/
           
           cd ./KernelSU-Next
-          
+          cd ../../../ 
+          ls
+          cd ./KernelSU-Next
           echo "Applying next SUSFS patches..."
           cp ../../../kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./
           patch -p1 --forward < 0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch || true
