--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -33,7 +33,7 @@ on:
       ksun_branch:
         required: true
         type: string
-        default: stable
+        default: next
       susfs_branch:
         required: true
         type: string
