--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -233,7 +233,7 @@ jobs:
               
               if [ "$(printf '%s\n' "$KERNEL_VERSION" "$MIN_VERSION" | sort -V | head -n1)" = "$KERNEL_VERSION" ]; then
                 echo "Patching ptrace!"
-                patch -p1 -F 3 < "../../../kernel_patches/gki_ptrace.patch"
+                patch -p1 -F 3 < "../../kernel_patches/gki_ptrace.patch"
               else
                 echo "Kernel >= $MIN_VERSION, skipping ptrace patch"
               fi
@@ -241,7 +241,7 @@ jobs:
               if [ "${{ inputs.model }}" == "OPAce5Pro" ] || [ "${{ inputs.model }}" == "OP13" ]; then
                 echo "Patching hmbird!"
                 echo 'obj-y += hmbird_patch.o' >> ./drivers/Makefile
-                patch -p1 -F 3 < "../../../kernel_patches/oneplus/hmbird/hmbird_kernel_patch.patch"
+                patch -p1 -F 3 < "../../kernel_patches/oneplus/hmbird/hmbird_kernel_patch.patch"
                 echo "Patching hmbird files!"
                 cd ./kernel/sched
                 rm -rf ext.c ext.h build_policy.c slim.h slim_sysctl.c
